--- a/airline-service/src/main/resources/META-INF/resources/index.html
+++ b/airline-service/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>hotel-service - 1.0.0-SNAPSHOT</title>
+        <title>airline-service - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -235,7 +235,7 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>io.xstefank</code></li>
-                                <li>ArtifactId: <code>hotel-service</code></li>
+                                <li>ArtifactId: <code>airline-service</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                                 <li>Quarkus Version: <code>2.8.2.Final</code></li>
                             </ul>
